--- a/build.xml
+++ b/build.xml
@@ -16,12 +16,12 @@
 
 <path id="NecessaryLibraries">
 
-<pathelement location="./Referenced Libraries/junit-4.13.jar"/>
+<pathelement location="./lib/junit-4.13.jar"/>
 
 <!--matcher-->
 
 
-<pathelement location="./Referenced Libraries/hamcrest-core-1.3.jar"/>
+<pathelement location="./lib/hamcrest-core-1.3.jar"/>
 
 <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
 
