--- a/src/TST/build.xml
+++ b/src/TST/build.xml
@@ -13,6 +13,7 @@
 <property location="${result.dir}/testclasses" name="result.testclasses.dir"/>
 
 
+	
 
 <path id="NecessaryLibraries">
 
@@ -86,7 +87,7 @@
 
 <fileset dir="${result.testclasses.dir}">
 
-<include name="**/*Test.class"/>
+<include name="**/*Calculater.class"/>
 
 </fileset>
 
